[gd_scene load_steps=6 format=3 uid="uid://clnxtrqj4ui8"]

[ext_resource type="Script" uid="uid://b5ly2tikavfw6" path="res://Scripts/Other/ui.gd" id="1_xoef8"]
[ext_resource type="PackedScene" uid="uid://6n071h8v5bp2" path="res://Scenes/UI/number_display.tscn" id="2_1lba8"]
[ext_resource type="Texture2D" uid="uid://br3qwir7qo4ol" path="res://Graphics/UI/BoneLabel.png" id="3_xfcfa"]
[ext_resource type="Texture2D" uid="uid://d4jcaofe21ojm" path="res://Graphics/UI/LivesLabel.png" id="4_x4cv7"]
[ext_resource type="Texture2D" uid="uid://bprecf2lpxvb4" path="res://Graphics/UI/GBoneLabel.png" id="5_bubwo"]

[node name="UI" type="CanvasLayer"]
scale = Vector2(4, 4)
transform = Transform2D(4, 0, 0, 4, 0, 0)
script = ExtResource("1_xoef8")

[node name="BoneDisplay" parent="." instance=ExtResource("2_1lba8")]
position = Vector2(27, 127.25)

[node name="LifeDisplay" parent="." instance=ExtResource("2_1lba8")]
position = Vector2(27, 152)

[node name="GBoneDisplay" parent="." instance=ExtResource("2_1lba8")]
position = Vector2(27, 139.75)

[node name="BoneLabel" type="Sprite2D" parent="."]
position = Vector2(12.5, 127.75)
texture = ExtResource("3_xfcfa")

[node name="LivesLabel" type="Sprite2D" parent="."]
position = Vector2(12.5, 152.5)
texture = ExtResource("4_x4cv7")

[node name="GBoneLabel" type="Sprite2D" parent="."]
position = Vector2(12.5, 140.25)
texture = ExtResource("5_bubwo")
